# js-static-analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md  example.js
.github/workflows/: ci.yml
src/: main.rs
