[package]
name = "js-static-analyzer"
version = "0.1.0"
edition = "2021"
description = "A simple JavaScript static analyzer CLI"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = "18.0.1"
swc_ecma_parser = "33.0.0"
swc_ecma_ast = "20.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
